infrastructure/kubernetes/app/sonarqube-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: sonarqube
    namespace: sonarqube
spec:
    parentRefs:
        - name: traefik
          namespace: default
          group: gateway.networking.k8s.io
          kind: Gateway
          sectionName: https
    hostnames:
        - sonarqube.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: sonarqube-sonarqube
                port: 9000
                group: ""
                kind: Service
                weight: 1
